[package]
name = "aarch64"
version = "0.1.0"
authors = ["lsongzhi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-a = "4.1"
bit_field = "0.10"
bitflags = "1.2"
register = "0.5"

[dependencies.cast]
version = "0.2"
default-features = false

[dependencies.ux]
default-features = false
version = "0.1"
