[package]
name = "aarch64"
version = "0.1.0"
authors = ["lsongzhi <lsongzhi@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-a = "7.2"
bit_field = "0.10"
bitflags = "1.3"
cast = { version = "0.3", default-features = false }
ux = { version = "0.1", default-features = false }
tock-registers = "0.7"
